New-Ingress1.16.2/2nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp2
  namespace: default
spec:
  selector:
    app: myapp2
    release: canary2
  ports:
  - name: http2
    targetPort: 80
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deploy2
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      release: canary2
  template:
    metadata:
      labels:
        app: myapp2
        release: canary2
    spec:
      containers:
      - name: myapp2
        image: nginx:v1
        ports:
        - name: http2
          containerPort: 80
