New-Ingress1.16.2/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
  - host: jb.ooo.com
    http:
      paths:
      - backend:
          serviceName: myapp
          servicePort: 80
  - host: jb2.ooo.com
    http:
      paths:
      - backend:
          serviceName: myapp2
          servicePort: 80
